<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kite</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="emailHint">user@domain.com</string>
    <string name="passwordHint">Password</string>
    <string name="login_welcome">Welcome to Kite</string>
    <string name="login_welcomeLogin">Log in or sign up</string>
    <string name="login_signIn">Sign In</string>
    <string name="login_btnSignUp">Sign Up</string>
    <string name="register_explanation">All fields below are required.</string>
    <string name="register_birthdayHint">Birthday</string>
    <string name="register_sex">Gender</string>
    <string name="register_sexMale">Male</string>
    <string name="register_rbFemale">Female</string>
    <string name="register_locationHint">Zip Code</string>
    <string name="register_button_register">Register</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore</string>
    <string name="cd_appIcons">application icon</string>
    <string name="profile_username">Username</string>
    <string name="profile_fullName">Full Name</string>
    <string name="register_hint_name">Full Name</string>
    <string name="ald_rateMe">Rate Me</string>
    <string name="rating_buy_it">Buy It</string>
    <string name="rating_download_it">Download It</string>
    <string name="rating_ignore_it">Ignore It</string>
    <string name="dialog_rating_allow_email">Allow Developer to Email Me</string>
    <string name="dialog_rating_btnRate">Rate!</string>
    <string name="ald_btnViewMockup">View Mockup</string>
    <string name="action_user_profile">User Profile</string>

</resources>
